package exp6;
//@Author：ranxing
//@Time：2022/10/2416:09
//@File：Implementor

public interface Implementor {
    public void add();
}
