package exp6;
//@Author：ranxing
//@Time：2022/10/24   16:13
//@File：LemonImpl.java

public class LemonImpl implements Implementor{
    @Override
    public void add() {
        System.out.println("加柠檬");
    }
}
