package exp6;
//@Author：ranxing
//@Time：2022/10/24   16:11
//@File：Milk.java

public class MilkImpl implements Implementor{
    @Override
    public void add() {
        System.out.println("加牛奶");
    }
}
