package exp6;
//@Author：ranxing
//@Time：2022/10/24   16:12
//@File：SugarImpl.java

public class SugarImpl implements Implementor{
    @Override
    public void add() {
        System.out.println("加糖");
    }
}
